clusters/production/external-servers/pve-0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pve-0
spec:
  ports:
    - name: https
      port: 8006
      targetPort: 8006
      protocol: TCP
