clusters/production/external-servers/pve-0/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pve-0-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pve-0.home.jonahsserver.com`)
      kind: Rule
      services:
        - name: pve-0
          port: 8006
          scheme: https
          serversTransport: pve-0-insecure-transport
  tls:
    secretName: pve-0-certificate-secret
